--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,3 +38,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.todo-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+ }
+ .todo-item p {
+  color: #888;
+  text-decoration: line-through;
+ }
