--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -205,3 +205,11 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+:root {
+    --main-color: #5ea3d0;
+    --secondary-color: #ADBC9F;
+    --main-text-color: #3e5869;
+    --secondary-text-color: #b0c7d6;
+    --send-message-form: #F5F5F5;
+}
