Revert "Merge pull request #15 from PG-002/Calendar"
This reverts commit f4d3feba428a22b9f4fa6a5279125beaa5a5e38f, reversing
changes made to f0f3f78779d845701522539b113d4a8b96b3e03d.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -42,6 +46,7 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
+  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
@@ -50,7 +55,3 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
