--- a/frontend/src/components/TodoList.css
+++ b/frontend/src/components/TodoList.css
@@ -42,7 +42,7 @@
     height:10px;
     margin-bottom: 0px;
     border-radius: 0px;
-    background: linear-gradient(135deg, #005A44 0%, #1a1a1a 100%);
+    background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
   }
   
   .input {
