--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -1,13 +1,13 @@
 .message-list-container {
   list-style: none;
   overflow-y: auto;
-  background: var(--secondary-color);
+  background: #222222;
 }
 
 .message-list {
   list-style: none;
   overflow-y: auto;
-  background: var(--secondary-color);
+  background: #222222;
   /* background-color: green; */
 }
 
@@ -77,7 +77,7 @@
 }
 
 .my-message .message-bubble {
-  background-color: #436850; /* Dark green bubble for the current user */
+  background-color: #005a44; /* Dark green bubble for the current user */
   color: white;
 }
 
@@ -86,7 +86,7 @@
 }
 
 .sender-name {
-  color: var(--main-text-color);
+  color: #29b6f6;
   font-size: 0.85em;
   margin-bottom: 4px;
 }
