--- a/frontend/src/components/SendMessageForm.css
+++ b/frontend/src/components/SendMessageForm.css
@@ -3,8 +3,7 @@
 .send-message-form {
   display: flex;
   justify-content: space-between;
-  background-color: var(--secondary-color);
-  box-sizing: border-box;
+  background-color: #222222;
 }
 
 .message-input {
