--- a/frontend/src/components/TodoList.css
+++ b/frontend/src/components/TodoList.css
@@ -19,8 +19,8 @@
     /* justify-content: center; */
     /* padding: 20px; */
     background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
-  background-size: 200% 200%;
-  animation: gradientAnimation 10s ease infinite;
+    background-size: 200% 200%;
+    animation: gradientAnimation 10s ease infinite;
     width: 100%;
     min-height: 0px;
   }
@@ -31,9 +31,10 @@
     align-items: center;
     min-width: 100%;
     /* Set a fixed max-height or height for the container */
-    max-height: 85.5vh; /* Adjust this value based on your design needs */
+    max-height: 81vh; /* Adjust this value based on your design needs */
     /* Enable vertical scrolling */
     overflow-y: auto;
+    overflow-x: hidden;
     /* You can also set padding here if needed */
     background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
     background-size: 200% 200%;
@@ -156,11 +157,24 @@
     outline: none;
     cursor: pointer;
     border: none;
-    background-color: #005A44;
+    background-color: rgb(54, 29, 229);
 }
 .commentsBtn:hover {
     background-color: #ddd;
     border: 1px solid #000;
+}
+
+.doneBtn {
+  padding: 5px 10px;
+  margin-right: 10px;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  background-color: #005A44;
+}
+.doneBtn:hover {
+  background-color: #ddd;
+  border: 1px solid #000;
 }
 
 .todo__header, .todo__item {
@@ -168,4 +182,109 @@
   justify-content: space-between;
   align-items: center;
 }
-  
+
+/* .toggle-switch {
+  position: relative;
+  display: inline-block;
+  width: 160px; 
+  height: 34px; 
+  user-select: none; 
+}
+
+.toggle-switch input {
+  opacity: 0; 
+  width: 0;
+  height: 0;
+}
+
+.switch-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+}
+
+.switch-label {
+  z-index: 2; 
+  color: #fff;
+  font-weight: bold;
+  padding: 0 60px;
+}
+
+.switch-slider:before {
+  position: absolute;
+  content: "";
+  height: 26px; 
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white; 
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+input:checked + .switch-slider {
+  background-color: #00d590;
+}
+
+input:checked + .switch-slider .switch-label-off {
+  display: none; 
+}
+
+input:not(:checked) + .switch-slider .switch-label-on {
+  display: none; 
+}
+
+input:checked + .switch-slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+input:focus + .switch-slider {
+  box-shadow: 0 0 1px #00d590; 
+} */
+
+.todo__header-switch {
+  display: flex;
+  justify-content: space-evenly;
+  color: white;
+  font-weight: bold;
+}
+
+.header-tab {
+  padding: 10px;
+  cursor: pointer;
+  flex: 1; /* Make tabs of equal width */
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.header-tab.active {
+  background-color: #005A44; /* Active tab color */
+  border-radius: 5px;
+}
+
+.header-tab.incomplete {
+  left: 25%; /* Position at 25% of the container */
+  transform: translateX(-500%); /* Center it */
+}
+
+.header-tab.complete {
+  right: 5%; /* Position at 75% of the container */
+  transform: translateX(500%); /* Center it */
+}
+
+
+
