--- a/frontend/src/components/TodoList.css
+++ b/frontend/src/components/TodoList.css
@@ -10,158 +10,155 @@
   }
 }
 
-
-
 .todo__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    /* padding: 20px; */
-    background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
-    background-size: 200% 200%;
-    animation: gradientAnimation 10s ease infinite;
-    width: 100%;
-    min-height: 0px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  /* padding: 20px; */
+  background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
+  background-size: 200% 200%;
+  animation: gradientAnimation 10s ease infinite;
+  width: 100%;
+  min-height: 0px;
+}
 
-  .todo__container_tasks {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 100%;
-    /* Set a fixed max-height or height for the container */
-    max-height: 81vh; /* Adjust this value based on your design needs */
-    /* Enable vertical scrolling */
-    overflow-y: auto;
-    overflow-x: hidden;
-    /* You can also set padding here if needed */
-    background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
-    background-size: 200% 200%;
-    animation: gradientAnimation 10s ease infinite;
-  }
-  
-  .form {
-    height:10px;
-    margin-bottom: 0px;
-    border-radius: 0px;
-    background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%);
-  }
-  
-  .input {
-    margin-bottom: 0px;
-    border-radius: 5px;
-  }
-  
-  .form__cta {
-    cursor: pointer;
-  }
-  
-  .todo__item {
-    border-radius: 0px;
-    width: 100%; /* Adjust width as needed */
-    /* max-width: 500px; Maximum width of the todo items */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    /* width: 70%; */
-    padding: 20px;
-    background-color: rgba(51, 51, 51, 0.8);
-    border: solid #555555 0.5px;
-    /* margin: 10px 0; */
-    justify-content: space-between;
-    color: #ffffff;
-    font-weight: bold;
+.todo__container_tasks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 100%;
+  /* Set a fixed max-height or height for the container */
+  max-height: 75vh; /* Adjust this value based on your design needs */
+  /* Enable vertical scrolling */
+  overflow-y: auto;
+  overflow-x: hidden;
+  /* You can also set padding here if needed */
+  /* background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%); */
+  /* background-size: 200% 200%; */
+  /* animation: gradientAnimation 10s ease infinite; */
+}
 
-  }
-  
-  .commentsBtn, .deleteBtn {
-    margin-right: 10px;
-  }
-  
-  button {
-    cursor: pointer;
-  }
+.form {
+  height: 10px;
+  margin-bottom: 0px;
+  border-radius: 0px;
+  /* background: linear-gradient(135deg, #003327 0%, #1a1a1a 100%); */
+}
 
-  .todo__header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    font-weight: bold;
-    color: white;
-    background-color: #222222; /* Or any other color according to your theme */
-  }
-  
-  .todo__header span {
-    flex: 1;
-    text-align: center;
-  }
-  
-  .todo__header span:nth-child(2) {
-    flex: 1.5;
-  }
+.input {
+  margin-bottom: 0px;
+  border-radius: 5px;
+}
 
-  .todo__section {
-    flex: 0.2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.form__cta {
+  cursor: pointer;
+}
 
-  .dropdown {
-    color: white;
-  }
+.todo__item {
+  border-radius: 0px;
+  width: 100%; /* Adjust width as needed */
+  /* max-width: 500px; Maximum width of the todo items */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  /* width: 70%; */
+  padding: 20px;
+  background-color: rgba(51, 51, 51, 0.8);
+  border: solid #555555 0.5px;
+  /* margin: 10px 0; */
+  justify-content: space-between;
+  color: #ffffff;
+  font-weight: bold;
+}
 
-  .form {
-    width: 100%;
-    min-height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 30px;
+.commentsBtn,
+.deleteBtn {
+  margin-right: 10px;
+}
+
+button {
+  cursor: pointer;
+}
+
+.todo__header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-weight: bold;
+  color: white;
+  background-color: #222222; /* Or any other color according to your theme */
+}
+
+.todo__header span {
+  flex: 1;
+  text-align: center;
+}
+
+.todo__header span:nth-child(2) {
+  flex: 1.5;
+}
+
+.todo__section {
+  flex: 0.2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropdown {
+  color: white;
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 30px;
 }
 .input {
-    padding: 10px 15px;
-    width: 80%;
-    margin-right: 15px;
+  padding: 10px 15px;
+  width: 80%;
+  margin-right: 15px;
 }
 .form__cta,
 .home__form > button {
-    width: 200px;
-    cursor: pointer;
-    padding: 10px;
-    height: 45px;
-    font-size: 16px;
-    background-color: #005A44;
-    color: #dff6ff;
-    border: none;
-    outline: none;
-    border-radius: 5px;
+  width: 200px;
+  cursor: pointer;
+  padding: 10px;
+  height: 45px;
+  font-size: 16px;
+  background-color: #005a44;
+  color: #dff6ff;
+  border: none;
+  outline: none;
+  border-radius: 5px;
 }
 
 .deleteBtn {
-    padding: 5px 10px;
-    background-color: rgb(202, 22, 22);
-    border: none;
-    outline: none;
-    color: #fff;
-    cursor: pointer;
+  padding: 5px 10px;
+  background-color: rgb(202, 22, 22);
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
 }
 .deleteBtn:hover {
-    color: rgb(202, 22, 22);
-    background-color: #fff;
+  color: rgb(202, 22, 22);
+  background-color: #fff;
 }
 .commentsBtn {
-    padding: 5px 10px;
-    margin-right: 10px;
-    outline: none;
-    cursor: pointer;
-    border: none;
-    background-color: rgb(54, 29, 229);
+  padding: 5px 10px;
+  margin-right: 10px;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  background-color: rgb(54, 29, 229);
 }
 .commentsBtn:hover {
-    background-color: #ddd;
-    border: 1px solid #000;
+  background-color: #ddd;
+  border: 1px solid #000;
 }
 
 .doneBtn {
@@ -170,14 +167,15 @@
   outline: none;
   cursor: pointer;
   border: none;
-  background-color: #005A44;
+  background-color: #005a44;
 }
 .doneBtn:hover {
   background-color: #ddd;
   border: 1px solid #000;
 }
 
-.todo__header, .todo__item {
+.todo__header,
+.todo__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -186,13 +184,13 @@
 .toggle-switch {
   position: relative;
   display: inline-block;
-  width: 160px; 
-  height: 34px; 
-  user-select: none; 
+  width: 160px;
+  height: 34px;
+  user-select: none;
 }
 
 .toggle-switch input {
-  opacity: 0; 
+  opacity: 0;
   width: 0;
   height: 0;
 }
@@ -205,16 +203,16 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 34px;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
 }
 
 .switch-label {
-  z-index: 2; 
+  z-index: 2;
   color: #fff;
   font-weight: bold;
   padding: 0 60px;
@@ -223,13 +221,13 @@
 .switch-slider:before {
   position: absolute;
   content: "";
-  height: 26px; 
+  height: 26px;
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white; 
-  -webkit-transition: .4s;
-  transition: .4s;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 50%;
   z-index: 1;
 }
@@ -239,11 +237,11 @@ input:checked + .switch-slider {
 }
 
 input:checked + .switch-slider .switch-label-off {
-  display: none; 
+  display: none;
 }
 
 input:not(:checked) + .switch-slider .switch-label-on {
-  display: none; 
+  display: none;
 }
 
 input:checked + .switch-slider:before {
@@ -253,7 +251,7 @@ input:checked + .switch-slider:before {
 }
 
 input:focus + .switch-slider {
-  box-shadow: 0 0 1px #00d590; 
+  box-shadow: 0 0 1px #00d590;
 }
 
 .todo__header-switch {
@@ -272,7 +270,7 @@ input:focus + .switch-slider {
 }
 
 .header-tab.active {
-  background-color: #005A44; /* Active tab color */
+  background-color: #005a44; /* Active tab color */
   border-radius: 5px;
 }
 
@@ -285,6 +283,3 @@ input:focus + .switch-slider {
   position: relative;
   left: 25vw; /* Position at 75% of the container */
 }
-
-
-
