--- a/frontend/src/components/TodoList.css
+++ b/frontend/src/components/TodoList.css
@@ -119,7 +119,7 @@ button {
 }
 .input {
   padding: 10px 15px;
-  width: 80%;
+  width: 50vw;
   margin-right: 15px;
 }
 .form__cta,
@@ -283,3 +283,80 @@ input:focus + .switch-slider {
   position: relative;
   left: 25vw; /* Position at 75% of the container */
 }
+
+.task-add-button {
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  margin-right: 5vw;
+}
+
+.assignee-dropdown {
+  display: block;
+  width: 100%;
+  padding: 0.5em 1em;
+  margin: 0.5em 0;
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 1.25;
+  color: #444;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #aaa;
+  border-radius: 0.5em;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-repeat: no-repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
+
+.assignee-dropdown::-ms-expand {
+  display: none;
+}
+
+.assignee-dropdown:hover {
+  border-color: #888;
+}
+
+.assignee-dropdown:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 5px rgba(0,105,217,.5);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
+}
+
+.assignee-dropdown option {
+  font-weight: normal;
+}
+
+.assignee-dropdown:disabled {
+  color: graytext;
+  background-color: #eee;
+}
+
+.modal-form {
+  margin: 2rem;
+  /* padding: 2rem; */
+  background: white;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form header {
+  margin-bottom: 2rem; /* Add space below the header */
+}
+
+.task-input {
+  margin-bottom: 1.5rem; /* Add space below the input */
+  padding: 1.25rem;
+}
+
+
+
+
